# ue4ss-scratch

./: CMakeLists.txt
MyAwesomeMod/: CMakeLists.txt  dllmain.cpp
